refactor codebase
Signed-off-by: PranavPurwar <purwarpranav80@gmail.com>